fixed the overflow on the main page, added react routers

--- a/client/src/components/Sidebar.module.css
+++ b/client/src/components/Sidebar.module.css
@@ -1,10 +1,9 @@
 .sidebar-container{
-    margin: 1rem;
-    margin-left:0.2rem;
     overflow-y: scroll;
-    height: 100vh;
+    height: calc(100vh - 60px);
     flex: 2;
-    
+    position: sticky;
+    top: 70px;
 }
 .sidebar-item{
     list-style: none;
